# ChangeLog for sys-apps/portage
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  01 Apr 2011; Michael Haubenwallner <haubi@gentoo.org>
  portage-2.2.01.18213.ebuild, +files/portage-2.2.01.18213-ebuildshell.patch:
  update ebuildshell patch (#155161)

*portage-2.2.01.18213 (28 Mar 2011)

  28 Mar 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.18091.ebuild, +portage-2.2.01.18213.ebuild:
  Version bump, matches portage-2.2.0_alpha29

*portage-2.2.01.18125 (17 Mar 2011)

  17 Mar 2011; Fabian Groffen <grobian@gentoo.org>
  +portage-2.2.01.18125.ebuild:
  Version bump

*portage-2.2.01.18091 (13 Mar 2011)

  13 Mar 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.17901.ebuild, +portage-2.2.01.18091.ebuild:
  Version bump, matches portage-2.2.0_alpha26, includes loadavg patch for AIX
  and HP-UX

*portage-2.2.01.18036 (27 Feb 2011)

  27 Feb 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.17865.ebuild, +portage-2.2.01.18036.ebuild:
  Version bump, matches portage-2.2.0_alpha25

*portage-2.2.01.17901 (10 Feb 2011)

  10 Feb 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.17757.ebuild, +portage-2.2.01.17901.ebuild:
  Version bump, matches portage-2.2.0_alpha23

*portage-2.2.01.17865 (06 Feb 2011)

  06 Feb 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.17693.ebuild, +portage-2.2.01.17865.ebuild:
  Version bump, FreeMiNT fixes

*portage-2.2.01.17757 (02 Feb 2011)

  02 Feb 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.17721.ebuild, +portage-2.2.01.17757.ebuild:
  Bump, hopefully with fixes for backtraces like bug #353395

*portage-2.2.01.17721 (30 Jan 2011)

  30 Jan 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.17680.ebuild, +portage-2.2.01.17721.ebuild:
  Bump, updated 'no offset with helpers' check

  27 Jan 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.17649.ebuild:
  Drop old

  26 Jan 2011; Fabian Groffen <grobian@gentoo.org>