@@ -13,7 +13,6 @@ DESCRIPTION="Prefix branch of the Portage Package Manager, used in Gentoo Prefix
 HOMEPAGE="http://www.gentoo.org/proj/en/gentoo-alt/prefix/"
 LICENSE="GPL-2"
 KEYWORDS="~ppc-aix ~x64-freebsd ~x86-freebsd ~hppa-hpux ~ia64-hpux ~x86-interix ~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
-PROVIDE="virtual/portage"
 SLOT="0"
 IUSE="build doc epydoc ipc linguas_pl selinux prefix-chaining"
 
