@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  10 Apr 2011; Fabian Groffen <grobian@gentoo.org>
+  portage-2.2.00.15842-r1.ebuild, portage-2.2.01.15553.ebuild,
+  portage-2.2.01.18125.ebuild, portage-2.2.01.18213.ebuild:
+  Remove PROVIDE=virtual/portage, bug #358847
+
   01 Apr 2011; Michael Haubenwallner <haubi@gentoo.org>
   portage-2.2.01.18213.ebuild, +files/portage-2.2.01.18213-ebuildshell.patch:
   update ebuildshell patch (#155161)
